	PR c++/55842 	* semantics.c (trait_expr_value): Call maybe_instantiate_noexcept.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194869 138bc75d-0d04-0410-961f-82ee72b054a4